<resources>
    <string name="app_name">TestTask</string>
    <string name="fines_gibdd">Штрафы ГИБДД</string>
    <string name="check_fines_of_official_source">Проверьте штрафы в официальных источниках</string>
    <string name="enter_data">ВВЕСТИ ДАННЫЕ</string>
    <string name="gibdd">ГИБДД</string>
    <string name="treasury">Казначейство</string>
    <string name="gosuslugi">Госуслуги</string>
    <string name="agreement">Переходя на следующий экран, вы принимаете пользовательское соглашение и даете согласие на обработку персональных данных</string>
    <string name="input_ts_number">Укажите регистрационный номер ТС</string>
    <string name="next">далее</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="push_of_new_fines_page">Получайте push-уведомления о новых штрафах</string>
    <string name="pay_fines_across_app_page">Оплачивайте штрафы через приложение</string>
    <string name="sale_pay_in_20_day">Скидка 50% при оплате в течении 20 дней</string>
    <string name="get_printout_how_in_bank">Получайте квитанцию, как в банке</string>
    <string name="repayment_in_state_database">Гарантия погашения в государственной базе данных</string>
    <string name="follow_rules_of_the_road">Соблюдайте правила дорожного движения</string>
    <string name="see_fines">Узнать штрафы</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="error">Номерной знак введен неккоректно</string>
    <string name="error1">Error</string>
    <string name="driver_license">Водительское удостоверение</string>
    <string name="car_number">Номерной знак</string>
    <string name="number_driver_license">Номер водительского удостоверения</string>
    <string name="cars">Автомобили</string>
    <string name="add_car">Добавить автомобиль</string>
    <string name="drivers">Водители</string>
    <string name="add_driver">Добавить водителя</string>
    <string name="decree">По поставновлению</string>
    <string name="pay_by_decree_number">Оплатить по номеру постановления</string>
    <string name="section_in_development">Раздел в разработке</string>
    <string name="input_number_driver_license">Введите номер водительского удостоверения</string>
    <string name="skip">Пропустить</string>
    <string name="next_btn">далее</string>
    <string name="next_btn_land_dl">далее</string>
    <string name="example_number_car">4773ВА77</string>
    <string name="example_number_car_land">4773ВА77</string>
    <string name="example_number_driver_license">00 00 000000</string>
    <string name="example_number_driver_license_land">00 АА 000000</string>
</resources>
