<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.RegistrationNumberActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_normal_16"
            android:layout_marginRight="@dimen/spacing_normal_16"
            android:background="@color/colorPrimaryDark"
            android:src="@drawable/number_ts_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal_16"
            android:layout_marginBottom="@dimen/spacing_normal_16"
            android:text="@string/input_ts_number"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText

            android:id="@+id/numberTsEditText"
            style="@style/style_editText_number_ts"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="@dimen/spacing_small_8"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:layout_marginEnd="@dimen/spacing_small_8"
            android:layout_marginBottom="@dimen/spacing_small_8"
            android:hint="А00АА 77"
            android:maxLength="11"/>

    <Button
        android:id="@+id/skipBtn"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/numberTsEditText"
            android:layout_margin="@dimen/spacing_small_8"
            android:layout_marginStart="@dimen/spacing_small_8"
            android:layout_marginLeft="@dimen/spacing_small_8"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:layout_marginEnd="@dimen/spacing_small_8"
            android:layout_marginRight="@dimen/spacing_small_8"
            android:layout_marginBottom="@dimen/spacing_small_8"
            android:layout_toLeftOf="@+id/nextBtn"
            android:text="Пропустить" />

        <Button
            android:id="@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/numberTsEditText"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/spacing_small_8"
            android:layout_marginStart="@dimen/spacing_small_8"
            android:layout_marginLeft="@dimen/spacing_small_8"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:layout_marginEnd="@dimen/spacing_small_8"
            android:layout_marginRight="@dimen/spacing_small_8"
            android:layout_marginBottom="@dimen/spacing_small_8"
            android:background="@drawable/btn_enter_data"
            android:text="@string/next"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </RelativeLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_small_8"
            android:text="@string/agreement" />

    </FrameLayout>


</LinearLayout>